--- a/robotino/CMakeLists.txt
+++ b/robotino/CMakeLists.txt
@@ -10,16 +10,24 @@ endif()
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE HEADERS "src/*.h")
+file(GLOB_RECURSE PB_SOURCES "../libs/msgs/*.cpp")
+file(GLOB_RECURSE PB_HEADERS "../libs/msgs/*.h")
+
 set (INCLUDE_DIRS "")
 foreach (_headerFile ${HEADERS})
     get_filename_component(_dir ${_headerFile} PATH)
     list (APPEND INCLUDE_DIRS ${_dir})
 endforeach()
+foreach (_headerFile ${PB_HEADERS})
+    get_filename_component(_dir ${_headerFile} PATH)
+    list (APPEND INCLUDE_DIRS ${_dir})
+endforeach()
+
 list(REMOVE_DUPLICATES INCLUDE_DIRS)
 include_directories(${INCLUDE_DIRS})
 include_directories(${GAZEBO_INCLUDE_DIRS})
 
 link_directories(${GAZEBO_LIBRARY_DIRS})
 
-add_library(robotino SHARED ${SOURCES})
+add_library(robotino SHARED ${SOURCES} ${PB_SOURCES})
 target_link_libraries(robotino ${GAZEBO_libraries})
